<?xml version="1.0"?>
<package format="2">
  <name>digit_msgs</name>
  <version>0.0.0</version>
  <description>The digit_msgs package</description>
  <maintainer email="grantgib@umich.edu">Grant Gibson</maintainer>
  <license>GPLv3</license>
  <!-- <url type="website">http://wiki.ros.org/digit_msgs</url> -->
  <author email="grantgib@umich.edu">Grant Gibson</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>


  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
